[package]
name = "ethtool"
version = "0.2.8"
authors = ["Gris Ge <fge@redhat.com>"]
license = "MIT"
edition = "2021"
description = "Linux Ethtool Communication Library"
keywords = ["network"]
categories = ["network-programming", "os"]
readme = "README.md"

[lib]
name = "ethtool"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-std"]

[dependencies]
async-std = { version = "1.13.0", optional = true}
futures = "0.3.31"
log = "0.4.26"
genetlink = { default-features = false, version = "0.2.6"}
netlink-packet-core = { version = "0.8.0"}
netlink-packet-generic = { version = "0.4.0" }
netlink-proto = { default-features = false, version = "0.12.0" }
netlink-sys = { version = "0.8.7" }
thiserror = "1.0.69"
tokio = { version = "1.44.0", features = ["rt"], optional = true}

[dev-dependencies]
tokio = { version = "1.44.0", features = ["macros", "rt", "rt-multi-thread"] }
env_logger = "0.9.3"

[[example]]
name = "dump_pause"
required-features = ["tokio_socket"]
